2010-07-28  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/logm.m: Rewrite. Thanks to M. Caliari and R. T. Guy.

2010-07-26  Rik <octave@nomad.inbox5.com>
	* deprecated/complement.m, deprecated/intwarning.m, general/arrayfun.m,
	general/circshift.m, general/colon.m, general/common_size.m,
	general/del2.m, general/flipdim.m, general/fliplr.m, general/flipud.m,
	general/idivide.m, general/interp1.m, general/interp2.m,
	general/interp3.m, general/interpn.m, general/loadobj.m,
	general/quadgk.m, general/rat.m, general/saveobj.m, general/shiftdim.m,
	geometry/delaunayn.m, image/image_viewer.m, image/imfinfo.m,
	io/csvread.m, io/csvwrite.m, io/strread.m, linear-algebra/condest.m,
	linear-algebra/housh.m, linear-algebra/onenormest.m,
	linear-algebra/qzhess.m, miscellaneous/bincoeff.m,
	miscellaneous/compare_versions.m, miscellaneous/computer.m,
	miscellaneous/edit.m, miscellaneous/fileattrib.m,
	miscellaneous/getfield.m, miscellaneous/license.m, miscellaneous/ls.m,
	miscellaneous/parseparams.m, miscellaneous/swapbytes.m,
	miscellaneous/ver.m, miscellaneous/warning_ids.m,
	optimization/fminbnd.m, optimization/fminunc.m, optimization/fsolve.m,
	optimization/fzero.m, optimization/glpk.m, optimization/lsqnonneg.m,
	optimization/pqpnonneg.m, optimization/qp.m, optimization/sqp.m,
	path/pathdef.m, pkg/pkg.m, plot/__marching_cube__.m, plot/axis.m,
	plot/colorbar.m, plot/contourc.m, plot/contourf.m, plot/cylinder.m,
	plot/ezplot.m, plot/isocolors.m, plot/isonormals.m, plot/legend.m,
	plot/print.m, plot/refreshdata.m, plot/slice.m, plot/subplot.m,
	plot/surfl.m, polynomial/compan.m, polynomial/mpoles.m,
	polynomial/poly.m, polynomial/polyaffine.m, polynomial/polyfit.m,
	polynomial/polygcd.m, polynomial/polyout.m, polynomial/residue.m,
	polynomial/roots.m, polynomial/unmkpp.m, set/union.m, signal/filter2.m,
	signal/stft.m, sparse/spdiags.m, specfun/bessel.m, specfun/beta.m,
	specfun/betaln.m, specfun/nchoosek.m, specfun/nthroot.m,